Implements clinic/schedule using QUERY (#11)